@startuml

' hay que ver si queda así...
class Casillero {
    - int x
    - int y
    - Casillero casilleroAbajo
    - Casillero casilleroDerecha
    - List<Enemigo> enemigos
    - Defensa defensa

    + Casillero(int unX, unY)
    + void establecerSiguiente(Pasarela unaPasarela)
    + Casillero obtenerSiguiente()
    + void establecerEnemigos(List<Enemigo> enemigos)
    + void establecerDefensa(Defensa unaDefensa)
    + void daniarJugador(Jugador jugador)
    + void moverEnemigos()
    + Credito atacado(int danio)
}

class Pasarela {

}

class Rocosa {

}

class Tierra {

}

Casillero <|-- Pasarela
Casillero <|-- Rocosa
Casillero <|-- Tierra


@enduml